--- a/drafts/abi/twitter.html
+++ b/drafts/abi/twitter.html
@@ -12,6 +12,63 @@
 
 <body>
 
+<!-- CONTAINER -->
+<div class="container">
+
+	<!-- HEADER -->
+	<div class="page-header">
+       	 <i class="fa fa-twitter fa-5x"></i>
+       	 <p class="lead">TWITTER API</p>
+    </div>
+
+    <!-- INPUT -->
+    <div class="row">
+    	<div class="col-md-3">
+    		<div class="input-group">
+  				<input type="text" class="form-control">
+  				<span class="input-group-addon"><i class="fa fa-search"></i></span>
+			</div>
+    	</div>
+  		<div class="col-md-4">
+  		</div>
+  		<div class="col-md-4">
+  		</div>
+    	<div class="col-md-1">
+    		<!--
+    			<a href="#" class="btn btn-default btn-lg active" role="button">
+    			<i class="fa fa-refresh fa-lg"></i>
+    			</a>
+    		-->
+		</div>
+	</div>
+    
+    <!-- THUMBNAILS -->
+    <br>
+    <div class="row">
+   		<div class="col-sm-6 col-md-3">
+      		<div class="thumbnail">
+         		<img src="http://tinyurl.com/nq6f9pa">
+      		</div>
+   		</div>
+   		<div class="col-sm-6 col-md-3">
+      		<div class="thumbnail">
+         		<img src="http://tinyurl.com/nq6f9pa">
+      		</div>
+   		</div>
+   		<div class="col-sm-6 col-md-3">
+      		<div class="thumbnail">
+         		<img src="http://tinyurl.com/nq6f9pa">
+      		</div>
+   		</div>
+   		<div class="col-sm-6 col-md-3">
+      		<div class="thumbnail">
+         		<img src="http://tinyurl.com/nq6f9pa">
+      		</div>
+   		</div>
+	</div>
+
+</div>
+
 <!-- GOOGLE JS -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- BOOTSTRAP JS -->
