--- a/drafts/abi/twitter.html
+++ b/drafts/abi/twitter.html
@@ -44,28 +44,9 @@
     
     <!-- THUMBNAILS -->
     <br>
-    <div class="row">
-   		<div class="col-sm-6 col-md-3">
-      		<div class="thumbnail">
-         		<img src="http://tinyurl.com/nq6f9pa">
-      		</div>
-   		</div>
-   		<div class="col-sm-6 col-md-3">
-      		<div class="thumbnail">
-         		<img src="http://tinyurl.com/nq6f9pa">
-      		</div>
-   		</div>
-   		<div class="col-sm-6 col-md-3">
-      		<div class="thumbnail">
-         		<img src="http://tinyurl.com/nq6f9pa">
-      		</div>
-   		</div>
-   		<div class="col-sm-6 col-md-3">
-      		<div class="thumbnail">
-         		<img src="http://tinyurl.com/nq6f9pa">
-      		</div>
-   		</div>
-	</div>
+    <div class="gallery">
+
+    </div>
 
 </div>
 
